--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2023-02-23 09:00:28.096669 </em></p>
+                <p><em> 2023-02-23 09:15:27.367233 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>SAS</td>
+      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>2023-02-23</td>
+      <td>2023-03-08</td>
+      <td>1000.0</td>
+      <td>0.0</td>
+      <td>2023-03-07</td>
+      <td>12 days</td>
+      <td>27800.0</td>
+      <td>27.80</td>
+      <td>3597.12</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -67,7 +84,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -128,14 +145,14 @@
       <td>2023-03-17</td>
       <td>22 days</td>
       <td>24100.0</td>
-      <td>23.65</td>
-      <td>10570.82</td>
+      <td>23.55</td>
+      <td>10615.71</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -145,14 +162,14 @@
       <td>2023-02-28</td>
       <td>5 days</td>
       <td>81500.0</td>
-      <td>82.20</td>
-      <td>5474.45</td>
+      <td>82.50</td>
+      <td>5454.55</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ICN" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>PBC</td>
       <td>PBC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>PSD</td>
       <td>PSD - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -179,14 +196,14 @@
       <td>2023-02-24</td>
       <td>1 days</td>
       <td>16300.0</td>
-      <td>16.60</td>
-      <td>4819.28</td>
+      <td>16.80</td>
+      <td>4761.90</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PSD" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PSD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>REE</td>
       <td>REE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-06</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>BDB</td>
       <td>BDB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-01-31</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/BDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -247,8 +264,8 @@
       <td>2023-03-01</td>
       <td>6 days</td>
       <td>177327.0</td>
-      <td>187.00</td>
-      <td>534.76</td>
+      <td>189.00</td>
+      <td>529.10</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -277,6 +294,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>SAS</td>
+      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>2023-02-23</td>
+      <td>2023-03-08</td>
+      <td>1000.0</td>
+      <td>0.0</td>
+      <td>2023-03-07</td>
+      <td>12 days</td>
+      <td>27800.0</td>
+      <td>27.80</td>
+      <td>3597.12</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -293,7 +327,7 @@
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -310,7 +344,7 @@
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -327,7 +361,7 @@
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>TTC</td>
       <td>TTC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -344,7 +378,7 @@
       <td><a href="https://simplize.vn/company/TTC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -354,14 +388,14 @@
       <td>2023-03-17</td>
       <td>22 days</td>
       <td>24100.0</td>
-      <td>23.65</td>
-      <td>10570.82</td>
+      <td>23.55</td>
+      <td>10615.71</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>ICN</td>
       <td>ICN - Trả cổ tức Đợt 3 năm 2022 bằng tiền 4500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -371,14 +405,14 @@
       <td>2023-02-28</td>
       <td>5 days</td>
       <td>81500.0</td>
-      <td>82.20</td>
-      <td>5474.45</td>
+      <td>82.50</td>
+      <td>5454.55</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ICN" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ICN" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>PBC</td>
       <td>PBC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -395,7 +429,7 @@
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>PSD</td>
       <td>PSD - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -405,14 +439,14 @@
       <td>2023-02-24</td>
       <td>1 days</td>
       <td>16300.0</td>
-      <td>16.60</td>
-      <td>4819.28</td>
+      <td>16.80</td>
+      <td>4761.90</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PSD" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PSD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -429,7 +463,7 @@
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>REE</td>
       <td>REE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-06</td>
@@ -446,7 +480,7 @@
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>BDB</td>
       <td>BDB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-01-31</td>
@@ -463,7 +497,7 @@
       <td><a href="https://simplize.vn/company/BDB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -473,8 +507,8 @@
       <td>2023-03-01</td>
       <td>6 days</td>
       <td>177327.0</td>
-      <td>187.00</td>
-      <td>534.76</td>
+      <td>189.00</td>
+      <td>529.10</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
